[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-simulation"
dynamic = ["version"]
dependencies = [
  "numpy",
  "matplotlib",
  "pynput",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
  "scipy",
]


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]

[project.scripts]
vehicle-simulation = "__main__:main"

# version management library
[tools.setuptools_scm]
write_to =  "vehicle-sim/__version__.py"
