<package format="3">
  <name>vehicle_sim</name>
  <version>1.0</version>
  <description>vehicle sim</description>
  <maintainer email="paddyyang4071@gmail.com">daydream</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>pytest</test_depend>
</package>
